user update feature added and spring security has been set up

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
             <version>3.2.5.RELEASE</version>
         </dependency>
         <dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>3.2.5.RELEASE</version>
+		</dependency>
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>${org.aspectj-version}</version>
