persistance problem resolved, changed hibernate version from 5.x to 4.x as per spring-persitance version requirement

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<org.springframework-version>4.2.4.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
-		<hibernate.version>5.0.4.Final</hibernate.version>
+		<hibernate.version>4.3.11.Final</hibernate.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -59,7 +59,13 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-		<!--Validation -->
+	<!--Validation -->
+		<!-- <dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.0-api</artifactId>
+			<version>1.0.1.Final</version>
+		</dependency> -->
+	
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
