deployment version adjustment as far as possible:

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,9 @@
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/nowstartjava
-db.username = root
-db.password = 
+db.url = jdbc:mysql://localhost:3306/programm_pdf
+db.username = programm_admin
+db.password = PDF_admin5216
+
+#db.driver = com.mysql.jdbc.Driver
+#db.url = jdbc:mysql://localhost:3306/nowstartjava
+#db.username = root
+#db.password = 
