--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v2.3.1
         with:
-          java-version: ${{ env.JAVA_VERSION }}
+          java-version: '11'
           cache: 'maven'
 
       - name: Build with Maven
