--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -21,21 +21,8 @@ jobs:
 
   deploy1:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: java-app
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: '*.jar'
+    steps:
+    - name: just echo a message dev success
+      run: |
+        echo Hello there success!
