--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -29,10 +29,11 @@ jobs:
         run: |
           echo Hello from the run test
           
-  master:
+  deployment1:
     runs-on: ubuntu-latest
     needs: build
+    
     steps:
-      - name: Download master branch
+      - name: Download artifact from build job echo test
         run: |
-          echo Hello from the dev branch
+          echo Hello from the run test
