--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -1,40 +1,95 @@
-name: Build and deploy JAR app to Azure Web App
-
-env:
-  AZURE_WEBAPP_NAME: your-app-name    # set this to the name of your Azure Web App
-  JAVA_VERSION: '11'                  # set this to the Java version to use
+name: Api CI/CD
 
 on:
   push:
-    branches:
-      - master
+    paths:
+      - 'api/**'
+      - 'TwoWeeksReady.Common/**'
+      - '.github/workflows/api.yaml'
+    branches: [ master ]
+  pull_request:
+    paths:
+      - 'api/**'
+      - '.github/workflows/api.yaml'
+    branches: [ master ]
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: just echo a message
-      run: |
-        echo Hello there!
-        
-        
-  deployment:
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.x
+    - name: Build
+      run: dotnet build -c Release
+      working-directory: ./api
+    - name: Publish
+      run: dotnet publish -c Release
+      working-directory: ./api
+    - name: Zip Functions Package
+      run: zip -r ../deploy.zip ./
+      working-directory: ./api/TwoWeeksReady/bin/Release/netcoreapp3.1/publish/
+    - name: Upload Deployment Zip
+      uses: actions/upload-artifact@v2
+      with:
+        name: deployment_zip
+        path: ./api/TwoWeeksReady/bin/Release/netcoreapp3.1/deploy.zip
+    - name: Upload Deployment Script
+      uses: actions/upload-artifact@v2
+      with:
+        name: deployment_script
+        path: ./az/deploy-backend.sh
+      
+  deploy_to_dev:
     runs-on: ubuntu-latest
     needs: build
-    
+    if: github.event_name != 'pull_request'
+    environment: development
     steps:
-      - name: Download artifact from build job echo test
-        run: |
-          echo Hello from the run test
-   
-   
-  deployment1:
+    - name: Download a Deployment Zip
+      uses: actions/download-artifact@v2
+      with:
+        name: deployment_zip
+    - name: Download a Deployment Script
+      uses: actions/download-artifact@v2
+      with:
+        name: deployment_script
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Azure Deploy Resources
+      if: github.event_name != 'pull_request'
+      uses: Azure/cli@v1.0.0
+      with:
+        inlineScript: |
+          chmod +x ./deploy-backend.sh
+          ./deploy-backend.sh -z deploy.zip
+          
+  deploy_to_beta:
     runs-on: ubuntu-latest
-    needs: build
-    
+    needs: deploy_to_dev
+    if: github.event_name != 'pull_request'
+    environment: beta
     steps:
-      - name: Download artifact from build job echo test
-        run: |
-          echo Hello from the run test
+    - name: Download a Deployment Zip
+      uses: actions/download-artifact@v2
+      with:
+        name: deployment_zip
+    - name: Download a Deployment Script
+      uses: actions/download-artifact@v2
+      with:
+        name: deployment_script
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Azure Deploy Resources
+      if: github.event_name != 'pull_request'
+      uses: Azure/cli@v1.0.0
+      with:
+        inlineScript: |
+          chmod +x ./deploy-backend.sh
+          ./deploy-backend.sh -z deploy.zip -r 2wr-beta-resources -e 2wrbeta   
